Update page - vaccines.html 3b7a0e82f4a73f90c7ea938a6e6520f2a33d4c55

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 8, 2021 at 6:40 AM</p>
+            <p class="small-text">Last updated&nbsp;March 8, 2021 at 6:46 AM</p>
           
         </div>
       </div>
@@ -531,7 +531,7 @@
 
 
 
-<h3 class="js-qa js-qa-answer">Limited quarantine exemption if you’re vaccinated</h3>
+<h3 class="js-qa js-qa-answer" id="Limited-quarantine-exemption-if-you’re-vaccinated">Limited quarantine exemption if you’re vaccinated</h3>
 
 
 
