--- a/taxes/index.html
+++ b/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;January 22, 2021 at 10:57 AM</p>
+            <p class="small-text">Last updated&nbsp;March 8, 2021 at 8:57 AM</p>
           
         </div>
       </div>
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>The federal <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available through July 1, 2021, of up to $14,000</li><li>Excluding forgiven Paycheck Protection Program loans from state gross income</li><li>Federal tax credits to small businesses for COVID-19 employee paid leave</li></ul>
+<ul><li>The federal <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available through July 1, 2021, of up to $14,000</li><li>Excluding forgiven Paycheck Protection Program loans from state gross income</li><li>Federal tax credits to small businesses for <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19 employee paid leave</a>, available through March 31, 2021</li></ul>
 
 
 
