--- a/pages/wordpress-posts/v2-state-dashboard.html
+++ b/pages/wordpress-posts/v2-state-dashboard.html
@@ -497,7 +497,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                   </cagov-chart-dashboard-groups-gender-deaths>               
                 </div> 
               </div>
-              <p class="small-text">Note: Percentages may not add up to 100% due to rounding.</p>
+              <p class="small-text">Note: Percentages may not add up to 100% due to rounding. “Unknown/undifferentiated” includes those who declined to state, whose gender information is missing, or who identify as transgender, gender non-binary, gender queer or intersex.</p>
             </div>
           </div>
           <div id="age-graph" class="toggle-group-element" style="display:none">
