Corrected Korean translation for HPI chart (N) -> {N}. 5562042362cce9319050a3915eaa16d6a566646a

--- a/ko/vaccines/index.html
+++ b/ko/vaccines/index.html
@@ -600,7 +600,7 @@
           <li data-label="chartDescription">캘리포니아 내 1차 및 2차 백신 접종자</li>
           <li data-label="legendLabel1">16세 이상 1차 백신 접종자</li>
           <li data-label="legendLabel2">16세 이상 2차 백신 접종자</li>
-          <li data-label="barLabel">HPI 사분위(N)</li>
+          <li data-label="barLabel">HPI 사분위 {N}</li>
           <li data-label="annotationLeast">최저 지역 사회 보건 여견</li>
           <li data-label="annotationMost">최고 지역 사회 보건 여견</li>
           <li data-label="footerText">{LATEST_ADMINISTERED_DATE} 일자 데이터 기준 {PUBLISHED_DATE} 업데이트.  “1차 접종자”는 최소 1차 Pfizer 또는 Moderna 백신을 접종받은 개인을 말합니다. “2차 접종자”는 2차 Pfizer 또는 Moderna 백신이나 1차 Janssen 백신을 접종받은 개인을 말합니다. 사분위 내 백신 접종자로 계산한 인원 수를 사분위 내 16세 이상 인구 수로 나눈 백분율.</li>
@@ -609,7 +609,7 @@
           <li data-label="chartTitle">투여 백신 대비 백신 접종 수</li>
           <li data-label="chartDescription">캘리포니아 내 백신 접종 건수</li>
           <li data-label="legendLabel1">투여한 백신의 전체 대비 % 및 건수</li>
-          <li data-label="barLabel">HPI 사분위(N)</li>
+          <li data-label="barLabel">HPI 사분위 {N}</li>
           <li data-label="annotationLeast">최저 지역 사회 보건 여견</li>
           <li data-label="annotationMost">최고 지역 사회 보건 여견</li>
           <li data-label="footerText">{LATEST_ADMINISTERED_DATE} 일자 데이터 기준 {PUBLISHED_DATE} 업데이트. 타주 주민 또는 우편 번호가 누락된 기록을 포함하여 HPI 점수가 없는 백신 제외. 사분위내 백신 투여자를 주 전체 백신 투여자로 나눈 백신 백분율.</li>
