--- a/safer-economy/index.html
+++ b/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint for a Safer Economy</h1>
           
-            <p class="small-text">Last updated&nbsp;March 8, 2021 at 3:26 PM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 8:35 AM</p>
           
         </div>
       </div>
