--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;February 13, 2021 at 1:09 PM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 10:52 AM</p>
           
         </div>
       </div>
@@ -194,16 +194,14 @@
 
 
 
-<div class="container py-4">
-  <div class="row">
-    <div class="col-md-auto">
-      <img src="https://files.covid19.ca.gov/img/Asset1-1.png" alt="illustration of a contact tracer" style="width: 250px;">
+<div class="row py-4">
+    <div class="col-md-4">
+      <img src="https://files.covid19.ca.gov/img/Asset1-1.png" alt="illustration of a contact tracer" class="mx-auto d-block" style="width: 250px;">
     </div>
-    <div class="col">
+    <div class="col-md-8">
       <p><strong>Contact tracing is when public health workers identify and notify the people who were exposed to infected people. </strong> They let them know that they&#8217;ve been in <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> with an infected person, and what to do next to keep themselves and their loved ones safe. Public health departments have used contact tracing for decades to fight the spread of infectious diseases. </p>
     </div>
   </div>
-</div>
 
 
 
@@ -215,12 +213,11 @@
 
 
 
-<div class="container py-4">
-  <div class="row">
-    <div class="col-md-auto">
-      <img src="https://files.covid19.ca.gov/img/Asset5at2x1.png" alt="illustration of COVID close contacts" style="width: 250px;">
+<div class="row py-4">
+    <div class="col-md-4">
+      <img src="https://files.covid19.ca.gov/img/Asset5at2x1.png" alt="illustration of COVID close contacts"  class="mx-auto d-block" style="width: 250px;">
     </div>
-    <div class="col">
+    <div class="col-md-8">
       <p>Contact tracers will:</p>
       <ul>
       <li>Notify you that you have been exposed to someone with COVID-19</li>
@@ -230,7 +227,6 @@
       </ul>
     </div>
   </div>
-</div>
 
 
 
@@ -256,18 +252,16 @@
 
 
 
-<div class="container py-4">
-  <div class="row">
-    <div class="col">
+<div class="row py-4">
+    <div class="col-md-6">
       <p><strong>Contact tracing works when you answer the call or text.</strong></p><p>All you have to do is answer the phone call or respond to the text message survey sent by your local health department.</p>
 <p>Contact tracing is an anonymous way to do your part. The more people answer the call or text, the more lives and jobs California will save and the faster we can re-open schools and businesses and keep them open. Your information is always kept confidential.
 </p>
     </div>
-<div class="col-md-auto">
-      <img src="https://files.covid19.ca.gov/img/Asset4at2x1.png" alt="illustration of man on phone" style="width: 250px;">
+<div class="col-md-4">
+      <img src="https://files.covid19.ca.gov/img/Asset4at2x1.png" alt="illustration of man on phone"  class="mx-auto d-block" style="width: 250px;">
     </div>
   </div>
-</div>
 
 
 
@@ -291,12 +285,11 @@
 
 
 
-<div class="container py-4">
-  <div class="row">
-    <div class="col-md-auto">
-      <img src="https://files.covid19.ca.gov/img/Asset6at2x1.png" alt="illustration of a test swab" style="width: 250px;">
+<div class="row py-8">
+    <div class="col-md-4">
+      <img src="https://files.covid19.ca.gov/img/Asset6at2x1.png" alt="illustration of a test swab" class="mx-auto d-block" style="width: 250px;">
     </div>
-    <div class="col">
+    <div class="col-md-8">
       <ul>
       <li>You will be asked basic questions like your name and age, the places you’ve been, and the people you’ve spent time with.</li>
       <li>Those people will be contacted and told they may have been exposed to COVID-19, but your name will not be shared with them.</li>
@@ -305,7 +298,6 @@
       </ul>
     </div>
   </div>
-</div>
 
 
 
@@ -313,29 +305,26 @@
 
 
 
-<div class="container py-4">
-  <div class="row">
-    <div class="col">
+<div class="row py-4">
+    <div class="col-md-8">
       <ul>
       <li>You’ll get a call, text, or email from your local public health department to inform you of this exposure.</li>
       <li>They will not share information about who may have exposed you. This information is confidential.</li>
       <li>They will help you understand your risk of getting sick. They&#8217;ll tell you what to do immediately to prevent further spread</li>
       </ul>
     </div>
-<div class="col-md-auto">
-      <img src="https://files.covid19.ca.gov/img/Asset2-1.png" alt="illustration of a public health worker" style="width: 250px;">
+<div class="col-md-4">
+      <img src="https://files.covid19.ca.gov/img/Asset2-1.png" alt="illustration of a public health worker"  class="mx-auto d-block" style="width: 250px;">
     </div>
   </div>
-</div>
 
 
 
-<div class="container py-4">
-  <div class="row">
-    <div class="col-md-auto">
-      <img src="https://files.covid19.ca.gov/img/Asset7at2x1.png" alt="illustration of a phone" style="width: 250px;">
+<div class="row py-4">
+    <div class="col-md-4">
+      <img src="https://files.covid19.ca.gov/img/Asset7at2x1.png" alt="illustration of a phone"  class="mx-auto d-block" style="width: 250px;">
     </div>
-    <div class="col">
+    <div class="col-md-8">
       <ul>
       <li>They will stay in touch to see if you develop symptoms.</li>
       <li>You will get resources to self-quarantine or self-isolate.</li>
@@ -343,7 +332,6 @@
       </ul>
     </div>
   </div>
-</div>
 
 
 
