Update translation - 104262297 (#3584) 0e697ae227202da4ec4c4d9ce95f2235f18f31e2

--- a/ar/taxes/index.html
+++ b/ar/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الضرائب</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;10:57 ص الساعة 22 يناير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;8:57 ص الساعة 8 مارس 2021</p>
           
         </div>
       </div>
@@ -185,7 +185,7 @@
 
 
 
-<p>قم بزيارة <a href="https://www.cdtfa.ca.gov/services/covid19.htm">موقع CDTFA COVID-19 الإلكتروني</a> للحصول على مزيد من المعلومات حول التمديدات.</p>
+<p>قم بزيارة <a href="https://www.cdtfa.ca.gov/services/covid19.htm">موقع CDTFA الإلكتروني الخاص بمرض كوفيد-19</a> للحصول على مزيد من المعلومات حول التمديدات.</p>
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>إن <a href="https://www.irs.gov/coronavirus/employee-retention-credit">الائتمان الضريبي لاستبقاء الموظفين</a>متاح حتى 1 يوليو 2021 وحتى مبلغ 14000 دولار</li><li>استثناء واستبعاد قروض برنامج حماية الرواتب المعفاة من الدخل الإجمالي للولاية</li><li>إعفاءات ضريبية فيدرالية موجهة للشركات التجارية الصغيرة من أجل إجازات الموظفين المدفوعة الأجر في ظل تفشي كوفيد-19</li></ul>
+<ul><li>إن <a href="https://www.irs.gov/coronavirus/employee-retention-credit">الائتمان الضريبي لاستبقاء الموظفين</a>متاح حتى 1 يوليو 2021 وحتى مبلغ 14000 دولار</li><li>استثناء واستبعاد قروض برنامج حماية الرواتب المعفاة من الدخل الإجمالي للولاية</li><li>إعفاءات ضريبية فيدرالية موجهة للشركات التجارية الصغيرة من أجل <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">إجازات الموظفين المدفوعة الأجر في ظل تفشي كوفيد-19</a>، وهي متاحة اعتبارًا من 31 مارس 2021</li></ul>
 
 
 
@@ -245,7 +245,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>هل هناك أي خصومات ضريبية للأشخاص المتأثرين من تفشّي مرض COVID-19؟</h4>
+            <h4>هل هناك أي خصومات ضريبية للأشخاص المتأثرين من تفشّي مرض كوفيد-19؟</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
