--- a/es/taxes/index.html
+++ b/es/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Impuestos</h1>
           
-            <p class="small-text">Última actualización&nbsp;22 de enero de 2021 a las 10:57 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;8 de marzo de 2021 a las 8:57 a. m.</p>
           
         </div>
       </div>
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>El <a href="https://www.irs.gov/coronavirus/employee-retention-credit">crédito fiscal por retención de empleados</a> federal, disponible hasta el 1.º de julio de 2021, de hasta $14,000</li><li>Exclusión de los préstamos perdonados del Programa de Protección de Pagos del ingreso bruto estatal</li><li>Créditos fiscales federales para pequeñas empresas por licencia remunerada de los empleados por COVID-19</li></ul>
+<ul><li>El <a href="https://www.irs.gov/coronavirus/employee-retention-credit">crédito fiscal por retención de empleados</a> federal, disponible hasta el 1.º de julio de 2021, de hasta $14,000</li><li>Exclusión de los préstamos perdonados del Programa de Protección de Pagos del ingreso bruto estatal</li><li>Créditos fiscales federales para pequeñas empresas por <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">licencia remunerada de los empleados por COVID-19</a>, disponible hasta el 31 de marzo de 2021.</li></ul>
 
 
 
