--- a/ko/taxes/index.html
+++ b/ko/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>세금</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 1월 22일 오전 10:57</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 8일 오전 8:57</p>
           
         </div>
       </div>
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>연방 정부의 <a href="https://www.irs.gov/coronavirus/employee-retention-credit">직원 유지 세액 공제(Employee Retention Tax Credit)</a>는 2021년 7월 1일까지 최대 $14,000 한도 내에서 제공</li><li>급여 보호 프로그램 대출 상환 면제분은 주에 보고하는 총소득액에서 제외</li><li>COVID-19 직원 유급 휴가를 위한 영세 사업체 연방 세액 공제</li></ul>
+<ul><li>연방 정부의 <a href="https://www.irs.gov/coronavirus/employee-retention-credit">직원 유지 세액 공제(Employee Retention Tax Credit)</a>는 2021년 7월 1일까지 최대 $14,000 한도 내에서 제공</li><li>급여 보호 프로그램 대출 상환 면제분은 주에 보고하는 총소득액에서 제외</li><li><a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19 직원 유급 휴가</a>에 대한 영세 사업체 연방 세액 공제는 2021년 3월 21일까지 제공</li></ul>
 
 
 
