--- a/tl/taxes/index.html
+++ b/tl/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Buwis</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Enero 22, 2021 sa 10:57 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 8, 2021 sa 8:57 AM</p>
           
         </div>
       </div>
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>Ang pederal na <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available mula Hulyo 1, 2021, na hanggang sa $14,000</li><li>Hindi kasama ang mga forgiven loan sa Paycheck Protection Program mula sa gross na kita ng estado</li><li>Mga credit sa buwis ng pederal sa maliliit na negosyo para sa bayad na leave ng empleyado sa panahon ng COVID-19</li></ul>
+<ul><li>Ang pederal na <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available mula Hulyo 1, 2021, na hanggang sa $14,000</li><li>Hindi kasama ang mga forgiven loan sa Paycheck Protection Program mula sa gross na kita ng estado</li><li>Mga credit sa buwis ng pederal sa maliliit na negosyo para sa <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">bayad na leave ng empleyado sa panahon ng COVID-19</a>, na available hanggang Marso 31, 2021</li></ul>
 
 
 
