--- a/vi/taxes/index.html
+++ b/vi/taxes/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Thuế</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 1, 2021 lúc 10:57</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;8 tháng 3, 2021 lúc 8:57</p>
           
         </div>
       </div>
@@ -211,7 +211,7 @@
 
 
 
-<ul><li><a href="https://www.irs.gov/coronavirus/employee-retention-credit">Tín Thuế Giữ Chân Nhân Viên</a> liên bang, được cung cấp đến ngày 1 tháng 7 năm 2021, lên tới $14,000</li><li>Không bao gồm các khoản vay trong Chương Trình Bảo Vệ Tiền Lương được xóa nợ từ tổng thu nhập của tiểu bang</li><li>Các khoản tín thuế liên bang dành cho các doanh nghiệp nhỏ để chi trả phúc lợi nghỉ phép có hưởng lương cho nhân viên trong đại dịch COVID-19</li></ul>
+<ul><li><a href="https://www.irs.gov/coronavirus/employee-retention-credit">Tín Thuế Giữ Chân Nhân Viên</a> liên bang, được cung cấp đến ngày 1 tháng 7 năm 2021, lên tới $14,000</li><li>Không bao gồm các khoản vay trong Chương Trình Bảo Vệ Tiền Lương được xóa nợ từ tổng thu nhập của tiểu bang</li><li>Các khoản tín thuế liên bang dành cho các doanh nghiệp nhỏ để chi trả <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">phúc lợi nghỉ phép có hưởng lương cho nhân viên trong đại dịch COVID-19</a>, được cung cấp đến ngày 31 tháng 3 năm 2021</li></ul>
 
 
 
