--- a/zh-hans/taxes/index.html
+++ b/zh-hans/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>税收</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年1月22日, 上午10:57</p>
+            <p class="small-text">最后更新时间&nbsp;2021年3月8日, 上午8:57</p>
           
         </div>
       </div>
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>联邦<a href="https://www.irs.gov/coronavirus/employee-retention-credit">员工留任税收抵免</a>的有效期至2021年7月1日，最高抵免$14,000</li><li>州总收入不包括可免除的薪资保障计划贷款</li><li>针对COVID-19雇员带薪休假，为小商业提供联邦税收抵免</li></ul>
+<ul><li>联邦<a href="https://www.irs.gov/coronavirus/employee-retention-credit">员工留任税收抵免</a>的有效期至2021年7月1日，最高抵免$14,000</li><li>州总收入不包括可免除的薪资保障计划贷款</li><li>针对<a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19雇员带薪休假</a>，为小商业提供联邦税收抵免，有效期至2021年3月31日</li></ul>
 
 
 
