--- a/zh-hant/taxes/index.html
+++ b/zh-hant/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>稅收</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年1月22日, 上午10:57</p>
+            <p class="small-text">最近更新&nbsp;2021年3月8日, 上午8:57</p>
           
         </div>
       </div>
@@ -209,7 +209,7 @@
 
 
 
-<ul><li>聯邦<a href="https://www.irs.gov/coronavirus/employee-retention-credit">員工留任稅收抵免</a>的有效期至2021年7月1日，最高抵免$14,000</li><li>州總收入不包括可免除的薪資保障計劃 (Paycheck Protection Program) 貸款</li><li>針對COVID-19員工帶薪休假，為小商業提供聯邦稅收抵免</li></ul>
+<ul><li>聯邦<a href="https://www.irs.gov/coronavirus/employee-retention-credit">員工留任稅收抵免</a>的有效期至2021年7月1日，最高抵免$14,000</li><li>州總收入不包括可免除的薪資保障計劃 (Paycheck Protection Program) 貸款</li><li>針對<a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19員工帶薪休假</a>，為小商業提供聯邦稅收抵免，有效期至2021年3月31日</li></ul>
 
 
 
