--- a/taxes/index.html
+++ b/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;March 8, 2021 at 8:57 AM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 1:34 PM</p>
           
         </div>
       </div>
@@ -193,11 +193,35 @@
 
 
 
-<p>You can now claim the California Earned Income Tax Credit and Young Child Tax Credit without an Individual Taxpayer Identification Number (ITIN). These tax credits can be claimed on 2020 individual tax returns (which are filed in 2021).</p>
+<h3>Golden State Stimulus</h3>
 
 
 
-<p>You can also use your 2019 income to claim the federal Earned Income Tax Credit and Child Tax Credit on your 2020 taxes. This lets you claim these credits even if your income was lower in 2020 due to job loss or underemployment.</p>
+<p>The Golden State Stimulus (GSS) is a $600, one-time relief payment. You’ll get it if you receive the California Earned Income Tax Credit after claiming it on your 2020 individual tax return, which is filed this year.</p>
+
+
+
+<p>You’ll get an additional $600, one-time GSS payment if you file your return with an Individual Taxpayer Identification Number (ITIN).</p>
+
+
+
+<p>ITIN filers who do not receive the California Earned Income Tax Credit but earn $75,000 or less will get a $600 GSS payment.</p>
+
+
+
+<p>You’ll receive your GSS payments shortly after you file your 2020 taxes.</p>
+
+
+
+<h3>Expanded Earned Income Tax Credit qualifications</h3>
+
+
+
+<p>You can now claim the California Earned Income Tax Credit and the state&#8217;s Young Child Tax Credit with an ITIN. These tax credits can be claimed on 2020 individual tax returns.</p>
+
+
+
+<p>You can also use your 2019 income to claim two federal tax credits, the Earned Income Tax Credit and Child Tax Credit, on your 2020 taxes. This lets you claim these credits even if your income was lower in 2020 due to job loss or underemployment.</p>
 
 
 
@@ -209,7 +233,7 @@
 
 
 
-<ul><li>The federal <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available through July 1, 2021, of up to $14,000</li><li>Excluding forgiven Paycheck Protection Program loans from state gross income</li><li>Federal tax credits to small businesses for <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19 employee paid leave</a>, available through March 31, 2021</li></ul>
+<ul><li>The federal <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available through July 1, 2021, of up to $14,000</li><li>The California Small Business COVID-19 Relief Grant, created as part of the Golden State Stimulus, of up to $25,000</li><li>Excluding forgiven Paycheck Protection Program loans from state gross income</li><li>Federal tax credits to small businesses for <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19 employee paid leave</a>, available through March 31, 2021</li></ul>
 
 
 
@@ -221,11 +245,11 @@
 
 
 
-<p>Payment plans are available to businesses that have:</p>
+<p>Payment plans are available for:</p>
 
 
 
-<ul><li>Sales and use tax due between December 15, 2020, and April 30, 2021</li><li>Up to $50,000 in sales and use tax liability</li><li>Less than $5 million in annual taxable sales</li></ul>
+<ul><li>Sales and use tax due on returns originally scheduled to be filed between December 15, 2020, and April 30, 2021</li><li>Up to $50,000 in sales and use tax liability</li><li>Businesses with less than $5 million in annual taxable sales</li></ul>
 
 
 
