--- a/pages/wordpress-posts/v2-state-dashboard.html
+++ b/pages/wordpress-posts/v2-state-dashboard.html
@@ -455,7 +455,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 
 
 <div class="bg-lightblue full-bleed">
-  <div class="container py-2">
+  <div class="container py-2 pb-5">
     <h2 class="text-center color-orange">Infections by group</h2>
     <div class="col-lg-12 bg-white px-3">
       <div class="d-flex flex-column flex-md-row justify-content-center my-3">
