--- a/taxes/index.html
+++ b/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Taxes</h1>
           
-            <p class="small-text">Last updated&nbsp;March 9, 2021 at 1:34 PM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 1:38 PM</p>
           
         </div>
       </div>
@@ -173,15 +173,15 @@
 
 
 
-<p>The due date to file and pay taxes and fees owed to the California Department of Tax and Fee Administration (CDTFA) originally due between December 15, 2020, and April 30, 2021 has been extended by three months. This extension is generally granted to individuals and businesses with less than $1 million in taxes and fees.</p>
+<p>The due date to file and pay taxes and fees owed to the California Department of Tax and Fee Administration (CDTFA) originally due between December 15, 2020, and April 30, 2021 has been extended by three months. This extension is generally granted to businesses with less than $1 million in taxes and fees.</p>
 
 
 
-<p>To request an extension if you have more than $1 million in taxes and fees or to ask a question about the extension, call CDTFA <a href="tel:800-400-7115" data-type="tel" data-id="tel:800-400-7115">800-400-7115</a>.</p>
+<p>To request an extension if you have more than $1 million in taxes and fees due or to ask a question about the extension, call CDTFA <a href="tel:800-400-7115" data-type="tel" data-id="tel:800-400-7115">800-400-7115</a>.</p>
 
 
 
-<p>This extension does not apply to California individual tax returns sent to the Franchise Tax Board.</p>
+<p>This extension does not apply to California individual income tax returns sent to the Franchise Tax Board.</p>
 
 
 
