--- a/guide-immigrant-californians/index.html
+++ b/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Help for immigrants</h1>
           
-            <p class="small-text">Last updated&nbsp;February 24, 2021 at 11:23 AM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 4:18 PM</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Know your basic rights</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Create a family preparedness plan</a></li><li>Know your rights at work (available as an <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English flyer</a> and a <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Rapid response numbers to report ICE activity</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal help for individual immigration cases</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Know your basic rights</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Create a family preparedness plan</a></li><li>Know your rights at work (available as an <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English flyer</a>&nbsp;and a&nbsp;<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Rapid response numbers to report ICE activity</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal help for individual immigration cases</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p>The <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">COVID-19 Guidance for Immigrant Californians (PDF)</a> will help you stay safe and informed. The guide may be updated over time.</p>
+<p>The <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">COVID-19 Guidance for Immigrant Californians</a> will help you stay safe and informed. The guide may be updated over time.</p>
 
 
 
@@ -313,7 +313,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Check the <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guide for Immigrant Californians (PDF)</a>. It has information about jobs, wages, benefits, and small business and housing support.</p>
+            <p>Check the <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guide for Immigrant Californians</a>. It has information about jobs, wages, benefits, and small business and housing support.</p>
 
                   </div>
                 </div>
