Update page - contracts.html 1c68b7335a7469b3a11b0e62a3bdf2bb16bd0b92

--- a/housing-for-agricultural-workers/index.html
+++ b/housing-for-agricultural-workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Housing for agricultural workers</h1>
           
-            <p class="small-text">Last updated&nbsp;February 18, 2021 at 1:30 PM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 5:12 PM</p>
           
         </div>
       </div>
@@ -233,7 +233,7 @@
 
 
 
-<p>If your county or organization would like to be a local administrator, please contact <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>. See more details in this <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">Program Overview (PDF)</a>.</p>
+<p>If your county or organization would like to be a local administrator, please contact <a href="mailto:cdfa.emergency_response@cdfa.ca.gov">cdfa.emergency_response@cdfa.ca.gov</a>. See more details in this <a href="https://files.covid19.ca.gov/pdf/Housing_for_the_Harvest-Program_Overview.pdf">Program Overview</a>.</p>
 
 
 
