Update page - contracts.html 080e8223b7c087403812cad7f74509010cf1f75c

--- a/contracts/index.html
+++ b/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Released COVID-19 Response Contracts</h1>
           
-            <p class="small-text">Last updated&nbsp;March 9, 2021 at 5:43 PM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 6:01 PM</p>
           
         </div>
       </div>
@@ -357,7 +357,7 @@
 <ul><li>Entisys Solutions, Inc: <a href="https://files.covid19.ca.gov/pdf/Entisys-solutions-inc-DMV.pdf">Entisys-solutions-inc-DMV</a></li></ul>
 <ul><li>Epic Reliable Services LLC: <a href="https://files.covid19.ca.gov/pdf/Epic-reliable-services-LLC-DGS.pdf">Epic-reliable-services-LLC-DGS</a></li></ul>
 <ul><li>Equinix LLC: <a href="https://files.covid19.ca.gov/pdf/Equinix-LLC-CDT.pdf">Equinix-LLC-CDT</a></li></ul>
-<ul><li>Eventus Solutions Group LLC: <a href="https://files.covid19.ca.gov/pdf/Eventus-solutions-group-LLC-EDD.pdf">Eventus-solutions-group-LLC-EDD</a></li></ul>
+<ul><li>Eventus Solutions Group LLC: <a href="https://files.covid19.ca.gov/pdf/Eventus-solutions-group-LLC-EDD.pdf">Eventus-solutions-group-LLC-EDD</a></li><li>Eventus Solutions Group LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/Eventus-solutions-group-LLC-EDD-amendment.pdf">Eventus-solutions-group-LLC-EDD-amendment</a></li><li>Eventus Solutions Group LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/Eventus-solutions-group-LLC-EDD-amendment-2.pdf">Eventus-solutions-group-LLC-EDD-amendment-2</a></li><li>Eventus Solutions Group LLC (Amendment): <a href="https://files.covid19.ca.gov/pdf/Eventus-solutions-group-LLC-EDD-amendment-3.pdf">Eventus-solutions-group-LLC-EDD-amendment-3</a></li></ul>
 <ul><li>Express Relief Services: <a href="https://files.covid19.ca.gov/pdf/Express-relief-services-DGS.pdf">Express-relief-services-DGS</a></li><li>Express Relief Services: <a href="https://files.covid19.ca.gov/pdf/Express-relief-services-DGS-2.pdf">Express-relief-services-DGS-2</a></li></ul>
 <ul><li>Fairfield Inn San Carlos: <a href="https://files.covid19.ca.gov/pdf/GRM-FISC-LLC-OES.pdf">GRM-FISC-LLC-OES</a></li></ul>
 <ul><li>Faro Consulting &amp; Solutions, Inc: <a href="https://files.covid19.ca.gov/pdf/Faro-consulting-solutions-LLC-DMV.pdf">Faro-consulting-solutions-LLC-DMV</a></li></ul>
@@ -490,7 +490,7 @@
 <ul><li>Mission Linen Supply: <a href="https://files.covid19.ca.gov/pdf/Mission-linen-supply-DGS.pdf">Mission-linen-supply-DGS</a></li><li>Mission Linen Supply: <a href="https://files.covid19.ca.gov/pdf/Mission-linen-supply-DGS-2.pdf">Mission-linen-supply-DGS-2</a></li><li>Mission Linen Supply: <a href="https://files.covid19.ca.gov/pdf/Mission-linen-supply-DGS-3.pdf">Mission-linen-supply-DGS-3</a></li></ul>
 <ul><li>Mobile-Med Work Health Solutions, Inc: <a href="https://files.covid19.ca.gov/pdf/Mobile-med-work-health-solutions-inc-CDPH.pdf">Mobile-med-work-health-solutions-inc-CDPH</a></li></ul>
 <ul><li>M&amp;M Media Solutions, Inc: <a href="https://files.covid19.ca.gov/pdf/MM-media-solutions-inc-CDPH.pdf">MM-media-solutions-inc-CDPH</a></li></ul>
-<ul><li>Nava Public Benefit Corporation: <a href="https://files.covid19.ca.gov/pdf/Nava-public-benefit-corporation-CDT.pdf">Nava-public-benefit-corporation-CDT</a></li></ul>
+<ul><li>Nava Public Benefit Corporation: <a href="https://files.covid19.ca.gov/pdf/Nava-public-benefit-corporation-CDT.pdf">Nava-public-benefit-corporation-CDT</a></li><li>Nava Public Benefit Corporation (Amendment): <a href="https://files.covid19.ca.gov/pdf/Nava-public-benefit-corporation-CDT-amendment.pdf">Nava-public-benefit-corporation-CDT-amendment</a></li><li>Nava Public Benefit Corporation (Amendment): <a href="https://files.covid19.ca.gov/pdf/Nava-public-benefit-corporation-CDT-amendment-2.pdf">Nava-public-benefit-corporation-CDT-amendment-2</a></li></ul>
 <ul><li>NC4 Public Sector, LLC: <a href="https://files.covid19.ca.gov/pdf/NC4-public-sector-LLC-CDPH.pdf">NC4-public-sector-LLC-CDPH</a></li></ul>
 <ul><li>Net InComm, Inc: <a href="https://files.covid19.ca.gov/pdf/Net-incomm-inc-CDPH.pdf">Net-incomm-inc-CDPH</a></li></ul>
 <ul><li>NoHold, Inc: <a href="https://files.covid19.ca.gov/pdf/Nohold-inc-DMV.pdf">Nohold-inc-DMV</a></li><li>NoHold, Inc (Amendment): <a href="https://files.covid19.ca.gov/pdf/Nohold-inc-DMV-amendment.pdf">Nohold-inc-DMV-amendment</a></li></ul>
@@ -669,7 +669,7 @@
 <ul><li>UC San Diego Health: <a href="https://files.covid19.ca.gov/pdf/UC-san-diego-health-CDPH.pdf">UC-san-diego-health-CDPH</a></li></ul>
 <ul><li>Unispace of North America LLC: <a href="https://files.covid19.ca.gov/pdf/Unispace-north-america-LLC.pdf">Unispace-north-america-LLC</a></li><li>Unispace of North America LLC: <a href="https://files.covid19.ca.gov/pdf/Unispace-north-america-LLC-2.pdf">Unispace-north-america-LLC-2</a></li><li>Unispace of North America LLC: <a href="https://files.covid19.ca.gov/pdf/Unispace-north-america-LLC-3.pdf">Unispace-north-america-LLC-3</a></li></ul>
 <ul><li>Universal Semiconductor, Inc: <a href="https://files.covid19.ca.gov/pdf/Universal-semiconductor-inc-DGS.pdf">Universal-semiconductor-inc-DGS</a></li></ul>
-<ul><li>University of California, Davis: <a href="https://files.covid19.ca.gov/pdf/University-california-davis-LWDA.pdf">University-california-davis-LWDA</a></li></ul>
+<ul><li>University of California, Davis (Regents): <a href="https://files.covid19.ca.gov/pdf/University-california-davis-LWDA.pdf">University-california-davis-LWDA</a></li></ul>
 <ul><li>University of California San Francisco: <a href="https://files.covid19.ca.gov/pdf/University-california-san-francisco-CDPH.pdf">University-california-san-francisco-CDPH</a></li><li>University of California San Francisco: <a href="https://files.covid19.ca.gov/pdf/University-california-san-francisco-CDPH-2.pdf">University-california-san-francisco-CDPH-2</a></li></ul>
 <ul><li>User Friendly Consulting, Inc: <a href="https://files.covid19.ca.gov/pdf/User-friendly-consulting-inc-DMV.pdf">User-friendly-consulting-inc-DMV</a></li><li>User Friendly Consulting, Inc (amendment): <a href="https://files.covid19.ca.gov/pdf/User-friendly-consulting-inc-DMV-amendment.pdf">User-friendly-consulting-inc-DMV-amendment</a></li></ul>
 <ul><li>Value Business Products, Inc: <a href="https://files.covid19.ca.gov/pdf/Value-business-products-inc-DMV.pdf">Value-business-products-inc-DMV</a></li></ul>
