Update page - industry-guidance.html 9604f797da935eddeb383eb1821fdbfe06abca77

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;March 5, 2021 at 2:40 PM</p>
+            <p class="small-text">Last updated&nbsp;March 9, 2021 at 6:55 PM</p>
           
         </div>
       </div>
@@ -198,7 +198,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Use the <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening (PDF)</a> to help plan and prepare for reopening your business.</p>
+            <p>Use the <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer Playbook for a Safe Reopening</a> to help plan and prepare for reopening your business.</p>
 <p>All businesses and facilities <strong>must </strong>follow the items listed here before reopening:&nbsp;</p>
 <ol><li><strong>Scroll down this page to find the guidance for your industry, business, event, or activity.</strong></li><li>Review it completely.</li><li>Perform a detailed risk assessment and create a worksite-specific protection plan.</li><li>Train employees on how to limit the spread of COVID-19. This includes how to <a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html?CDC_AA_refVal=https%3A%2F%2Fwww.cdc.gov%2Fcoronavirus%2F2019-ncov%2Fsymptoms-testing%2Findex.html">screen themselves for symptoms</a> and when to stay home.</li><li>Set up individual control measures and screenings.</li><li>Put disinfection protocols in place.</li><li>Establish physical distancing guidelines.&nbsp;</li><li>Establish universal face covering requirements (with allowed exceptions). See CDPH’s <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/guidance-for-face-coverings.aspx">guidance for the use of face coverings</a>.</li><li>Post your completed checklist so everyone can know the steps you’ve taken. Feel free to add more safety measures to the ones included in your industry’s guidance.</li></ol>
 
@@ -242,7 +242,7 @@
 
 
 
-<p>Review <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">how to respond to COVID-19 cases (PDF)</a> in your workplace and prevent further spread.</p>
+<p>Review <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">how to respond to COVID-19 cases</a> in your workplace and prevent further spread.</p>
 
 
 
@@ -274,7 +274,7 @@
 
 
 
-<ul><li>Use the <a href="https://files.covid19.ca.gov/pdf/guidance-family-friendly-practices-employers--en.pdf">family-friendly practices for employers (PDF)</a> to develop work-life balance policies that include childcare supports and workplace flexibility.</li><li>Make sure your workers know about <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--en.pdf">support for working families (PDF)</a>.</li></ul>
+<ul><li>Use the <a href="https://files.covid19.ca.gov/pdf/guidance-family-friendly-practices-employers--en.pdf">family-friendly practices for employers</a> to develop work-life balance policies that include childcare supports and workplace flexibility.</li><li>Make sure your workers know about <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--en.pdf">support for working families</a>.</li></ul>
 
 
 
@@ -2173,7 +2173,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>California has updated the guidance and framework for reopening K-12 schools for in-person learning for the 2020-2021 school year. Learn more in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12 schools reopening framework and guidance (PDF)</a>. Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">questions and answers</a> about the K-12 schools reopening framework and guidance.</p>
+            <p>California has updated the guidance and framework for reopening K-12 schools for in-person learning for the 2020-2021 school year. Learn more in the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">K-12 schools reopening framework and guidance</a>. Check the <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Schools-FAQ.aspx">questions and answers</a> about the K-12 schools reopening framework and guidance.</p>
 <p> Schools must also follow the <a href="https://covid19.ca.gov/industry-guidance/#cohort-guidance">guidance related to cohorts</a> of children and youth. For school-sponsored youth sports, follow the <a title="guidance for youth sports" href="https://covid19.ca.gov/industry-guidance/#youthsports-guidance">guidance for youth sports</a>.</p>
 <p>Visit <a href="https://schools.covid19.ca.gov/">Safe Schools for All</a> for the latest information and resources about COVID-19 and schools.</p>
 
