Update translation - 104379432 (#3606) 82ee97cd0207dd6affc39ef3ed1e7dd11bcf34cc

--- a/tl/taxes/index.html
+++ b/tl/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Buwis</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Marso 8, 2021 sa 8:57 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Marso 9, 2021 sa 1:38 PM</p>
           
         </div>
       </div>
@@ -173,15 +173,15 @@
 
 
 
-<p>Ang orihinal na takdang petsa para mag-file at magbayad ng mga buwis at bayarin sa California Department of Tax and Fee Administration (CDTFA) sa pagitan ng Disyembre 15, 2020, at Abril 30, 2021 ay pinalawig nang tatlong buwan. Karaniwang ibinibigay ang pagpapalawig na ito sa mga indibidwal at negosyong wala pa sa $1 milyon ang mga buwis at bayarin.</p>
+<p>Ang orihinal na takdang petsa para maghain at magbayad ng mga buwis at bayarin sa Pangasiwaan ng Departamento ng Buwis at Bayarin ng California (California Department of Tax and Fee Administration, CDTFA) sa pagitan ng Disyembre 15, 2020, at Abril 30, 2021 ay pinalawig nang tatlong buwan. Karaniwang ibinibigay ang pagpapalawig na ito sa mga negosyong wala pa sa $1 milyon ang mga buwis at bayarin.</p>
 
 
 
-<p>Para humiling ng pagpapalawig kung mahigit sa $1 milyon ang iyong mga buwis at bayarin o para magtanong tungkol sa pagpapalawig, tumawag sa CDTFA <a href="tel:800-400-7115" data-type="tel" data-id="tel:800-400-7115">800-400-7115</a>.</p>
+<p>Para humiling ng pagpapalawig kung mahigit sa $1 milyon ang iyong mga buwis at bayarin na dapat bayaran o para magtanong tungkol sa pagpapalawig, tumawag sa CDTFA <a href="tel:800-400-7115" data-type="tel" data-id="tel:800-400-7115">800-400-7115</a>.</p>
 
 
 
-<p>Hindi nalalapat ang pagpapalawig na ito sa mga tax return ng indibiwal sa California na ipinadala sa Franchise Tax Board.</p>
+<p>Hindi nalalapat ang pagpapalawig na ito sa mga income tax return ng indibiwal sa California na ipinadala sa Franchise Tax Board.</p>
 
 
 
@@ -193,11 +193,35 @@
 
 
 
-<p>Puwede mo nang i-claim ang California Earned Income Tax Credit at Young Child Tax Credit nang walang Individual Taxpayer Identification Number (ITIN). Puwedeng kunin ang mga tax credit na ito sa mga 2020 individual tax return (na isusumite sa 2021).</p>
+<h3>Golden State Stimulus</h3>
 
 
 
-<p>Puwede mo ring gamitin ang iyong kita sa 2019 para maghain ng pederal na Earned Income Tax Credit at Child Tax Credit sa iyong mga buwis sa 2020. Nagbibigay-daan ito sa iyong ma-claim ang mga credit na ito kung mas mababa ang kita mo sa 2020 dahil sa pagkawala ng trabaho o underemployment.</p>
+<p>Ang Golden State Stimulus (GSS) ay isang $600 na minsanang bayad para sa tulong. Makukuha mo ito kung matatanggap mo ang California Earned Income Tax Credit pagkatapos mo itong i-claim sa iyong 2020 na tax return ng indibidwal, na inihain ngayong taon.</p>
+
+
+
+<p>Makakakuha ka ng karagdagang $600 na minsanang bayad ng GSS kung ihahain mo ang iyong return sa pamamagitan ng isang Numero ng Pagkakakilanlan ng Indibidwal na Tagapagbayad ng Buwis (Individual Taxpayer Identification Number, ITIN).</p>
+
+
+
+<p>Ang mga maghahain ng ITIN na hindi makakatanggap ng California Earned Income Tax Credit pero kumikita ng hindi hihigit sa $75,000 ay makakakuha ng $600 na bayad ng GSS.</p>
+
+
+
+<p>Matatanggap mo ang iyong mga bayad ng GSS pagkatapos mong ihain ang iyong mga 2020 na buwis.</p>
+
+
+
+<h3>Mga kwalipikasyon para sa Pinalawig na Credit sa Buwis ng Kita</h3>
+
+
+
+<p>Puwede mo nang i-claim ang California Earned Income Tax Credit at Young Child Tax Credit ng estado sa pamamagitan ng ITIN. Puwedeng kunin ang mga tax credit na ito sa mga 2020 na indibidwal na tax return.</p>
+
+
+
+<p>Puwede mo ring gamitin ang iyong kita sa 2019 para mag-claim ng dalawang tax credit sa pederal, ang Earned Income Tax Credit at Child Tax Credit sa iyong mga buwis sa 2020. Nagbibigay-daan ito sa iyong ma-claim ang mga credit na ito kung mas mababa ang kita mo sa 2020 dahil sa pagkawala ng trabaho o underemployment.</p>
 
 
 
@@ -209,7 +233,7 @@
 
 
 
-<ul><li>Ang pederal na <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available mula Hulyo 1, 2021, na hanggang sa $14,000</li><li>Hindi kasama ang mga forgiven loan sa Paycheck Protection Program mula sa gross na kita ng estado</li><li>Mga credit sa buwis ng pederal sa maliliit na negosyo para sa <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">bayad na leave ng empleyado sa panahon ng COVID-19</a>, na available hanggang Marso 31, 2021</li></ul>
+<ul><li>Ang pederal na <a href="https://www.irs.gov/coronavirus/employee-retention-credit">Employee Retention Tax Credit</a>, available mula Hulyo 1, 2021, na hanggang sa $14,000</li><li>Hanggang $25,000 ang Grant ng Tulong ng California na ito para sa Maliliit na Negosyo sa Panahon ng COVID-19, na binuo bilang bahagi ng Golden State Stimulus</li><li>Hindi kasama ang mga forgiven loan sa Paycheck Protection Program mula sa gross na kita ng estado</li><li>Mga credit sa buwis ng pederal sa maliliit na negosyo para sa <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">bayad na leave ng empleyado sa panahon ng COVID-19</a>, na available hanggang Marso 31, 2021</li></ul>
 
 
 
@@ -221,11 +245,11 @@
 
 
 
-<p>Available ang mga plano sa pagbabayad sa mga negosyong may:</p>
+<p>Available ang mga plano ng pagbabayad para sa:</p>
 
 
 
-<ul><li>Nakatakda ang buwis sa benta at paggamit sa pagitan ng Disyembre 15, 2020, at Abril 30, 2021</li><li>Hanggang $50,000 na pananagutan sa buwis sa beta at bayad</li><li>Wala pang $5 milyon sa taunang nabubuwisang benta</li></ul>
+<ul><li>Mga buwis sa benta at paggamit na nakatakda sa mga return na orihinal na nakiskedyul sa pagitan ng Disyembre 15, 2020, at Abril 30, 2021</li><li>Hanggang $50,000 na pananagutan sa buwis sa benta at bayad</li><li>Mga negosyong wala pang $5 milyon ang taunang nabubuwisang benta</li></ul>
 
 
 
