--- a/zh-hant/taxes/index.html
+++ b/zh-hant/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>稅收</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年3月8日, 上午8:57</p>
+            <p class="small-text">最近更新&nbsp;2021年3月9日, 下午1:38</p>
           
         </div>
       </div>
@@ -173,7 +173,7 @@
 
 
 
-<p>向加州稅務和費用管理局 (California Department of Tax and Fee Administration, CDTFA) 申報和支付稅務費用的截止期限延長了三個月，這些費用原本應在2020年12月15日至2021年4月30日之間支付。此延期一般是為稅務費用低於$1百萬的個人及商業提供。</p>
+<p>向加州稅務和費用管理局 (California Department of Tax and Fee Administration, CDTFA) 申報和支付稅務費用的截止期限延長了三個月，這些費用原本應在2020年12月15日至2021年4月30日之間支付。此延期一般是為稅務費用低於$1百萬的企業提供。</p>
 
 
 
@@ -181,11 +181,11 @@
 
 
 
-<p>此延期不適用於向特許經營稅委員會 (Franchise Tax Board) 發送的加州個人納稅申報單。</p>
+<p>此延期不適用於向特許經營稅委員會 (Franchise Tax Board) 發送的加州個人所得稅申報單。</p>
 
 
 
-<p>請造訪<a href="https://www.cdtfa.ca.gov/services/covid19.htm">CDTFA COVID-19網站</a>，獲取有關延期的更多資訊。</p>
+<p>請造訪<a href="https://www.cdtfa.ca.gov/services/covid19.htm">CDTFA 新型冠狀病毒網站</a>，獲取有關延期的更多資訊。</p>
 
 
 
@@ -193,11 +193,35 @@
 
 
 
-<p>即使您沒有個人納稅識別號碼 (Individual Taxpayer Identification Number, ITIN)，您現在也可以申請加州勞動所得稅抵免和幼兒稅收抵免。這些稅收抵免可在2020年個人納稅申報單（於2021年提交）中進行申請。</p>
+<h3>金州刺激計劃</h3>
 
 
 
-<p>您亦可利用2019年的收入，來為2020年的稅務申請聯邦勞動所得稅抵免及兒童稅收抵免。這樣即使您因失業或未充分就業而導致2020年的收入減少，您也可申請這些抵免。</p>
+<p>金州刺激計劃 (Golden State Stimulus, GSS) 是一筆價值$600的一次性救濟金。如果您在今年提交的2020年個人所得稅報稅中申請，並獲得了加州所得稅減免，則您有資格領取此救濟金。</p>
+
+
+
+<p>如果您使用個人納稅人識別號 (Individual Taxpayer Identification Number, ITIN) 提交報稅單，則您將額外獲得一筆價值$600的一次性GSS資金。</p>
+
+
+
+<p>ITIN申報人如果未獲得加州所得稅減免，但收入不超過$75,000，則將獲得$600的GSS資金。</p>
+
+
+
+<p>提交2020年的報稅單後您將很快獲得GSS付款。</p>
+
+
+
+<h3>擴大的所得稅減免資格</h3>
+
+
+
+<p>您現在可以使用ITIN申請加州所得稅減免和州幼兒稅收減免。這些稅收減免可在2020年個人納稅申報單中進行申請。</p>
+
+
+
+<p>您亦可利用2019年的收入，在您的2020年報稅單中申請兩種聯邦稅收減免，即所得稅減免和兒童稅收減免。這樣即使您因失業或未充分就業而導致2020年的收入減少，您也可申請這些減免。</p>
 
 
 
@@ -209,7 +233,7 @@
 
 
 
-<ul><li>聯邦<a href="https://www.irs.gov/coronavirus/employee-retention-credit">員工留任稅收抵免</a>的有效期至2021年7月1日，最高抵免$14,000</li><li>州總收入不包括可免除的薪資保障計劃 (Paycheck Protection Program) 貸款</li><li>針對<a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19員工帶薪休假</a>，為小商業提供聯邦稅收抵免，有效期至2021年3月31日</li></ul>
+<ul><li>聯邦<a href="https://www.irs.gov/coronavirus/employee-retention-credit">員工留任稅收減免</a>的有效期至2021年7月1日，最高抵免$14,000</li><li>加州小型企業新型冠狀病毒救濟金（金州刺激計劃的一部分）的最高減免額為$25,000</li><li>州總收入不包括可免除的薪資保障計劃 (Paycheck Protection Program) 貸款</li><li>針對<a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">COVID-19員工帶薪休假</a>，為小商業提供聯邦稅收抵免，有效期至2021年3月31日</li></ul>
 
 
 
@@ -221,11 +245,11 @@
 
 
 
-<p>符合以下條件的商業可以參加付款計劃：</p>
+<p>參與付款計劃的資格如下：</p>
 
 
 
-<ul><li>銷售和使用稅申報期限在2020年12月15日至2021年4月30日之間</li><li>銷售和使用稅負債最高達$50,000</li><li>年應稅銷售額低於$5百萬</li></ul>
+<ul><li>原計劃在2020年12月15日至2021年4月30日之間提交的銷售和使用稅申報表</li><li>銷售和使用稅負債最高達$50,000</li><li>年應稅銷售額低於$5百萬的企業</li></ul>
 
 
 
