--- a/ar/taxes/index.html
+++ b/ar/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الضرائب</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;8:57 ص الساعة 8 مارس 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;1:38 م الساعة 9 مارس 2021</p>
           
         </div>
       </div>
@@ -173,19 +173,19 @@
 
 
 
-<p>إن التاريخ المستحق لتقديم الإقرارات ودفع الضرائب والرسوم المستحقة لإدارة كاليفورنيا للضرائب والرسوم (CDTFA) المستحقة في الأصل في الفترة ما بين 15 ديسمبر 2020 و30 أبريل 2021 قد تم تمديده لثلاثة أشهر. ويُمنح هذا التمديد عموما للأفراد والشركات التجارية التي تقل ضرائبها ورسومها عن مليون دولار.</p>
+<p>إن التاريخ المستحق لتقديم الإقرارات ودفع الضرائب والرسوم المستحقة لإدارة كاليفورنيا للضرائب والرسوم (CDTFA) المستحقة في الأصل في الفترة ما بين 15 ديسمبر 2020 و30 أبريل 2021 قد تم تمديده لثلاثة أشهر. ويُمنح هذا التمديد عموما للشركات التجارية التي تقل ضرائبها ورسومها عن مليون دولار.</p>
 
 
 
-<p>لطلب تمديد في حال كان عليك ضرائب ورسوم تزيد عن مليون دولار أو لطرح سؤال حول التمديد، اتصل بإدارة كاليفورنيا للضرائب والرسوم على الرقم <a href="tel:800-400-7115" data-type="tel" data-id="tel:800-400-7115">‎800-400-7115</a>.</p>
+<p>لطلب تمديد في حال كان عليك ضرائب ورسوم مستحقة تزيد عن مليون دولار أو لطرح سؤال حول التمديد، اتصل بإدارة كاليفورنيا للضرائب والرسوم على الرقم <a href="tel:800-400-7115" data-type="tel" data-id="tel:800-400-7115">‎800-400-7115</a>.</p>
 
 
 
-<p>ولا ينطبق هذا التمديد على الإقرارات الضريبية الفردية في كاليفورنيا والتي تم إرسالها إلى مجلس ضرائب الامتيازات التجارية.</p>
+<p>ولا ينطبق هذا التمديد على الإقرارات الضريبية على دخل الأفراد في كاليفورنيا والتي تم إرسالها إلى مجلس ضرائب الامتيازات التجارية.</p>
 
 
 
-<p>قم بزيارة <a href="https://www.cdtfa.ca.gov/services/covid19.htm">موقع CDTFA الإلكتروني الخاص بمرض كوفيد-19</a> للحصول على مزيد من المعلومات حول التمديدات.</p>
+<p>قم بزيارة <a href="https://www.cdtfa.ca.gov/services/covid19.htm">الموقع الإلكتروني إدارة كاليفورنيا للضرائب والرسوم (CDTFA) الخاص بمرض كوفيد-19</a> للحصول على مزيد من المعلومات حول التمديدات.</p>
 
 
 
@@ -193,11 +193,35 @@
 
 
 
-<p>بإمكانك الآن المطالبة بائتمان ضريبة الدخل المكتسب في كاليفورنيا والائتمان الضريبي للأطفال الصغار دون أن يكون لديك رقم تعريف دافع الضرائب للأفراد (ITIN). يمكن المطالبة بهذه الإعفاءات/الائتمانات الضريبية في الإقرارات الضريبية الفردية لعام 2020 (التي يتم تقديمها في عام 2021).</p>
+<h3>Golden State Stimulus</h3>
 
 
 
-<p>يمكنك أيضًا استخدام دخلك لعام 2019 للمطالبة بإعفاء/ائتمان ضريبي على الدخل المكتسب والائتمان الضريبي للأطفال على ضرائبك لعام 2020. وهذا يسمح لك بالمطالبة بهذه الإعفاءات/الائتمانات حتى ولو كان دخلك أقل في عام 2020 بسبب خسارة الوظائف أو نقص العمالة.</p>
+<p>إن Golden State Stimulus (GSS) عبارة عن شيك بقيمة 600 دولار أمريكي كمعونة إغاثة تُدفع لمرة واحدة. ستحصل عليه إذا حصلت على إعفاء ضريبي على الدخل المكتسب في كاليفورنيا بعد المطالبة به في الإقرار الضريبي الفردي لعام 2020، والذي تم تقديمه هذا العام.</p>
+
+
+
+<p>وسوف تحصل على مبلغ إضافي قدره 600 دولار يُدفع لمرة واحدة من GSS إذا قدمت إقرارك برقم تعريف دافع الضرائب للأفراد (ITIN).</p>
+
+
+
+<p>إن مقدمي رقم تعريف دافع الضرائب للأفراد (ITIN) الذين لا يحصلون على إعفاء ضريبي على الدخل المكتسب في كاليفورنيا ولكنهم يكسبون 75000 دولار أو أقل سيحصلون على 600 دولار معونة GSS.</p>
+
+
+
+<p>ستتلقى مبالغ معونة GSS بعد فترة وجيزة من تقديمك لملف ضرائبك لعام 2020.</p>
+
+
+
+<h3>المؤهلات الموسعة للإعفاء الضريبي على الدخل المكتسب</h3>
+
+
+
+<p>بإمكانك الآن المطالبة بائتمان ضريبة الدخل المكتسب في كاليفورنيا والائتمان الضريبي للأطفال الصغار الخاص بالولاية شريطة أن يكون لديك رقم تعريف دافع الضرائب للأفراد (ITIN). يمكن المطالبة بهذه الإعفاءات/الائتمانات الضريبية في الإقرارات الضريبية الفردية لعام 2020.</p>
+
+
+
+<p>يمكنك أيضًا استخدام دخلك لعام 2019 للمطالبة بكلا الإعفائين الضريبيين الفيدراليين: الإعفاء الضريبي على الدخل المكتسب والإعفاء الضريبي للأطفال، على ضرائبك لعام 2020. وهذا يسمح لك بالمطالبة بهذه الإعفاءات/الائتمانات حتى ولو كان دخلك أقل في عام 2020 بسبب خسارة الوظائف أو نقص العمالة.</p>
 
 
 
@@ -209,7 +233,7 @@
 
 
 
-<ul><li>إن <a href="https://www.irs.gov/coronavirus/employee-retention-credit">الائتمان الضريبي لاستبقاء الموظفين</a>متاح حتى 1 يوليو 2021 وحتى مبلغ 14000 دولار</li><li>استثناء واستبعاد قروض برنامج حماية الرواتب المعفاة من الدخل الإجمالي للولاية</li><li>إعفاءات ضريبية فيدرالية موجهة للشركات التجارية الصغيرة من أجل <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">إجازات الموظفين المدفوعة الأجر في ظل تفشي كوفيد-19</a>، وهي متاحة اعتبارًا من 31 مارس 2021</li></ul>
+<ul><li>إن <a href="https://www.irs.gov/coronavirus/employee-retention-credit">الائتمان الضريبي لاستبقاء الموظفين</a>متاح حتى 1 يوليو 2021 وحتى مبلغ 14000 دولار</li><li>إن منحة إغاثة الشركات الصغيرة في كاليفورنيا لمواجهة كوفيد-19، والتي تم استحداثها كجزء من Golden State Stimulus، تصل إلى 25000 دولار</li><li>استثناء واستبعاد قروض برنامج حماية الرواتب المعفاة من الدخل الإجمالي للولاية</li><li>إعفاءات ضريبية فيدرالية موجهة للشركات التجارية الصغيرة من أجل <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">إجازات الموظفين المدفوعة الأجر في ظل تفشي كوفيد-19</a>، وهي متاحة اعتبارًا من 31 مارس 2021</li></ul>
 
 
 
@@ -221,11 +245,11 @@
 
 
 
-<p>وتتوافر خطط السداد للشركات التي لديها:</p>
+<p>خطط الدفع متاحة لما يلي:</p>
 
 
 
-<ul><li>ضريبة مبيعات وانتفاع مستحقة في الفترة ما بين 15 ديسمبر 2020 و30 أبريل 2021</li><li>ما يصل إلى 50000 دولار في شكل التزامات ضريبية على المبيعات والانتفاع</li><li>أقل من 5 ملايين دولار من المبيعات السنوية الخاضعة للضريبة</li></ul>
+<ul><li>ضريبة مبيعات وانتفاع مستحقة على الإقرارات التي كان من المقرر تقديمها في الفترة ما بين 15 ديسمبر 2020 و30 أبريل 2021</li><li>ما يصل إلى 50000 دولار في شكل التزامات ضريبية على المبيعات والانتفاع</li><li>الشركات التي لديها أقل من 5 ملايين دولار من المبيعات السنوية الخاضعة للضريبة</li></ul>
 
 
 
