--- a/es/taxes/index.html
+++ b/es/taxes/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Impuestos</h1>
           
-            <p class="small-text">Última actualización&nbsp;8 de marzo de 2021 a las 8:57 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;9 de marzo de 2021 a las 1:38 p. m.</p>
           
         </div>
       </div>
@@ -173,7 +173,7 @@
 
 
 
-<p>La fecha de vencimiento para presentar y pagar impuestos y tarifas adeudadas al Departamento de Administración Tributaria de California (California Department of Tax and Fee Administration, CDTFA) que venció originalmente entre el 15 de diciembre de 2020 y el 30 de abril de 2021 se prorrogó tres meses. Esta prórroga generalmente se otorga a personas y empresas con menos de $1 millón en impuestos y tarifas.</p>
+<p>La fecha de vencimiento para presentar y pagar impuestos y tarifas adeudadas al Departamento de Administración Tributaria de California (California Department of Tax and Fee Administration, CDTFA) que venció originalmente entre el 15 de diciembre de 2020 y el 30 de abril de 2021 se prorrogó tres meses. Esta prórroga generalmente se otorga a empresas con menos de $1 millón en impuestos y tarifas.</p>
 
 
 
@@ -181,7 +181,7 @@
 
 
 
-<p>Esta prórroga no se aplica a las declaraciones de impuestos individuales de California enviadas al Franchise Tax Board (Departamento de Impuestos).</p>
+<p>Esta prórroga no se aplica a las declaraciones de impuestos de ingresos individuales de California enviadas al Franchise Tax Board (Departamento de Impuestos).</p>
 
 
 
@@ -193,11 +193,35 @@
 
 
 
-<p>Ahora puede reclamar el crédito tributario por ingreso del trabajo de California y el crédito tributario por hijos menores sin un número de identificación personal de contribuyente (Individual Taxpayer Identification Number, ITIN). Estos créditos fiscales se pueden reclamar sobre las declaraciones de impuestos individuales de 2020 (que se presentan en 2021).</p>
+<h3>Estímulo del Estado Dorado</h3>
 
 
 
-<p>También puede usar sus ingresos de 2019 para reclamar el crédito tributario por ingreso del trabajo y el crédito tributario por hijos menores federales en sus impuestos de 2020. Esto le permite reclamar estos créditos incluso si sus ingresos fueron menores en 2020 por pérdida del empleo o por subempleo.</p>
+<p>El Estímulo del Estado Dorado (Golden State Stimulus, GSS) es un pago de apoyo único de $600. Usted lo obtendrá si recibe el crédito tributario por ingresos del trabajo de California después de reclamarlo en su declaración de impuestos individual de 2020, que se presenta este año.</p>
+
+
+
+<p>Recibirá un pago único adicional de $600 del GSS si presenta su declaración con un número de identificación personal del contribuyente (Individual Taxpayer Identification Number, ITIN).</p>
+
+
+
+<p>Los contribuyentes con un ITIN que no reciban el crédito tributario por ingresos del trabajo de California, pero que ganen $75,000 o menos recibirán el pago de un GSS de $600.</p>
+
+
+
+<p>Recibirá sus pagos del GSS poco después de presentar sus impuestos de 2020.</p>
+
+
+
+<h3>Calificaciones ampliadas del crédito tributario por ingresos del trabajo</h3>
+
+
+
+<p>Ahora puede reclamar el crédito tributario por ingreso del trabajo de California y el crédito tributario del estado por hijos menores con un ITIN. Estos créditos fiscales se pueden reclamar sobre las declaraciones de impuestos individuales de 2020.</p>
+
+
+
+<p>También puede usar sus ingresos de 2019 para reclamar dos créditos fiscales federales: el crédito tributario por ingresos del trabajo y el crédito tributario por hijos menores sobre sus impuestos de 2020. Esto le permite reclamar estos créditos incluso si sus ingresos fueron menores en 2020 por pérdida del empleo o por subempleo.</p>
 
 
 
@@ -209,7 +233,7 @@
 
 
 
-<ul><li>El <a href="https://www.irs.gov/coronavirus/employee-retention-credit">crédito fiscal por retención de empleados</a> federal, disponible hasta el 1.º de julio de 2021, de hasta $14,000</li><li>Exclusión de los préstamos perdonados del Programa de Protección de Pagos del ingreso bruto estatal</li><li>Créditos fiscales federales para pequeñas empresas por <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">licencia remunerada de los empleados por COVID-19</a>, disponible hasta el 31 de marzo de 2021.</li></ul>
+<ul><li>El <a href="https://www.irs.gov/coronavirus/employee-retention-credit">crédito fiscal por retención de empleados</a> federal, disponible hasta el 1.º de julio de 2021, de hasta $14,000.</li><li>Las ayudas subvencionadas para pequeñas empresas por COVID-19 de California, creadas como parte del Estímulo del Estado Dorado, de hasta $25,000.</li><li>Exclusión de los préstamos perdonados del Programa de Protección de Pagos del ingreso bruto estatal.</li><li>Créditos fiscales federales para pequeñas empresas por <a href="https://www.irs.gov/newsroom/covid-19-related-tax-credits-for-paid-leave-provided-by-small-and-midsize-businesses-faqs">licencia remunerada de los empleados por COVID-19</a>, disponible hasta el 31 de marzo de 2021.</li></ul>
 
 
 
@@ -221,11 +245,11 @@
 
 
 
-<p>Los planes de pagos están disponibles para empresas que tienen:</p>
+<p>Los planes de pago están disponibles para:</p>
 
 
 
-<ul><li>impuesto sobre las ventas y el uso adeudado entre el 15 de diciembre de 2020 y el 30 de abril de 2021</li><li>hasta $50,000 en impuestos sobre ventas y uso</li><li>menos de $5 millones en ventas anuales sujetas a impuestos</li></ul>
+<ul><li>impuesto sobre las ventas y el uso adeudado de las declaraciones originalmente programadas para presentarse entre el 15 de diciembre de 2020 y el 30 de abril de 2021</li><li>hasta $50,000 en impuestos sobre ventas y uso</li><li>negocios con menos de $5 millones en ventas anuales sujetas a impuestos</li></ul>
 
 
 
