Update page - workers.html 9990e5e51d6b9222fcfb44b3dfeb0959cad30ed3

--- a/workers/index.html
+++ b/workers/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Workers</h1>
           
-            <p class="small-text">Last updated&nbsp;March 9, 2021 at 3:48 PM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 9:52 AM</p>
           
         </div>
       </div>
@@ -277,7 +277,7 @@
 
 
 
-<ul><li>Check <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--en.pdf">support for working families (PDF)</a> for information to help you locate child care, find assistance to pay for child care, and connect you to additional supports for your family.</li><li>Visit the <a href="https://covid19.ca.gov/childcare/">Childcare</a> page to learn more about childcare options near you.</li></ul>
+<ul><li>Check <a href="https://files.covid19.ca.gov/pdf/guidance-support-working-families--en.pdf">support for working families</a> for information to help you locate child care, find assistance to pay for child care, and connect you to additional supports for your family.</li><li>Visit the <a href="https://covid19.ca.gov/childcare/">Childcare</a> page to learn more about childcare options near you.</li></ul>
 
 
 
