--- a/pages/wordpress-posts/v2-state-dashboard.html
+++ b/pages/wordpress-posts/v2-state-dashboard.html
@@ -455,7 +455,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
 <div class="bg-lightblue full-bleed">
   <div class="container pt-4 pb-5">
     <h2 class="text-center color-orange">Infections by group</h2>
-    <div class="col-lg-12 bg-white px-3 py-4">
+    <div class="col-lg-12 bg-white px-4 py-4">
       <div class="d-flex flex-column flex-md-row justify-content-center my-3">
         <div class="large-tabs">
           <button class="large-tab toggle-active js-toggle-group ethnicity">Race and Ethnicity</button>
@@ -465,7 +465,7 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
       </div>
       <div class="row">
         <!-- newly added -->
-        <div class="toggle-group-container col-10 mx-auto d3-charts">
+        <div class="toggle-group-container col-sm-12 col-lg-10 px-3 mx-auto d3-charts">
           <div id="gender-graph" class="toggle-group-element" style="display:none">
             <div id="genderGroupChartContainer">
               <div class="mx-auto">
