Update page - industry-guidance.html bc14ccc2338b5858cfb4cc47c8bbe7a80f8cadbe

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 9:09 AM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 12:33 PM</p>
           
         </div>
       </div>
@@ -177,7 +177,7 @@
 
 
 
-<ul><li><a href="https://covid19.ca.gov/industry-guidance/#can-open">Find out if your business can open</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#protect-workers">Protect your workers</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#ventilation">Ventilation for indoor operations</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#outdoor-structures">Temporary structures for outdoor operations</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#statewide-guidance">Industry guidance</a> (for specific industries)</li></ul>
+<ul class="toc"><li><a href="https://covid19.ca.gov/industry-guidance/#can-open">Find out if your business can open</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#protect-workers">Protect your workers</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#ventilation">Ventilation for indoor operations</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#outdoor-structures">Temporary structures for outdoor operations</a></li><li><a href="https://covid19.ca.gov/industry-guidance/#statewide-guidance">Industry guidance</a> (for specific industries)</li></ul>
 
 
 
