--- a/latest-news/index.html
+++ b/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>News from the Governor&rsquo;s Office</h1>
           
-            <p class="small-text">Last updated&nbsp;March 10, 2021 at 11:02 AM</p>
+            <p class="small-text">Last updated&nbsp;March 10, 2021 at 12:36 PM</p>
           
         </div>
       </div>
